--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ BRIS_DB_NAME=RISDB
 
 APP_NAME=BRIS
 BRIS_SERVER_PORT=6001
-LOGS_PATH=/apps/ris/logs
-PDF_BACKUP_PATH=/apps/ris/pdf_backup
+LOGS_PATH=c:/apps/ris/logs
+PDF_BACKUP_PATH=c:/apps/ris/pdf_backup
 JWT_EXPIRES_IN=16h
 JWT_COOKIE_EXPIRES_IN=16
 DICTIONARY_SERVER=http://192.168.1.32:4050
