--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "Radiology Information System Server",
   "main": "dist/index.js",
   "scripts": {
-    "start": "pm2 start ecosystem.config.js && pm2 logs --lines 1",
+    "start": "pm2 start ecosystem.config.js && pm2 logs",
     "stop": "pm2 stop all && pm2 kill",
     "reloadall": "pm2 reload all",
-    "logs": "pm2 logs --lines 1",
+    "logs": "pm2 logs",
     "status": "pm2 status"
   },
   "dependencies": {
