--- a/.env
+++ b/.env
@@ -11,4 +11,12 @@ PDF_BACKUP_PATH=c:/apps/ris/pdf_backup
 JWT_EXPIRES_IN=16h
 JWT_COOKIE_EXPIRES_IN=16
 DICTIONARY_SERVER=http://192.168.1.32:4050
+
+# ALL, UNFINISH_UNVERIFIED
 MODALITY_TAB_FILTER=ALL
+
+# NO, YES
+W_EV_INSITE=NO
+
+# NO, YES
+SINGLE_LOGIN=NO
