--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ PDF_BACKUP_PATH=/apps/ris/pdf_backup
 JWT_EXPIRES_IN=16h
 JWT_COOKIE_EXPIRES_IN=16
 DICTIONARY_SERVER=http://192.168.1.32:4050
+REPORT_SEARCH_SERVER=http://localhost:4051
 
 # ALL, UNFINISH_UNVERIFIED
 MODALITY_TAB_FILTER=ALL
